# qa-swagLabs

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt  run_tests.ps1  run_tests_old.ps1
logs/Android/: report.html
logs/Android/TC01_login/: log.html  output.xml  report.html
logs/Android/TC02_filter_products/: report.html
logs/Android/TC02_logout/: log.html  output.xml  report.html
logs/Android/TC03_filter_products/: report.html
logs/Android/filter_products/: log.html  output.xml  report.html
logs/iOS/TC01_login/: log.html  output.xml  report.html
logs/iOS/TC02_filter_products/: report.html
logs/iOS/TC02_logout/: report.html
logs/iOS/TC03_filter_products/: report.html
logs/iOS/filter_products/: log.html  output.xml  report.html
logs_Android/: log.html  output.xml  report.html
logs_iOS/: log.html  output.xml  report.html
resources/: base.resource  base_keywords.resource  base_keywords.robot  base_variables.resource  base_variables.robot  filter_products_variables.resource  login_variables.resource
resources/01-access/: login-keywords.resource
resources/02-filter-products/: filter-products-keywords.resource  filter-products-variables.resource
resources/03-shopping-cart/: shopping-cart-keywords.resource  shopping-cart-variables.resource
resources/04-checkout/: checkout-keywords.resource  checkout-variables.resource
resources/05-geolocation/: geolocation-keywords.resource  geolocation-variables.resource
resources/common/: common-keywords.resource  common-variables.resource
resources/devdata/: path_tests.bkp  path_tests.txt  test_tags.txt  test_tags_e2e.txt
tests/: TC01_login.robot  TC02_filter_products.robot  TC02_logout.robot  TC03_catalog.robot  TC03_filter_products.robot  filter_products.robot  login.robot
tests/01-Login-logout/: login-logout-test.robot
tests/02-Filter-products/: filter-products-test.robot
tests/03-Shopping-cart/: shopping-cart-test.robot
tests/04-Checkout/: checkout-test.robot
tests/05-Geolocation/: geolocation-test.robot
