[tool.poetry]
name = "qa-swaglabs"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    "Felipe Bernard de Oliveira Soares Diniz <felipebernard.pe@gmail.com>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
robotframework = "^7.3.2"
robotframework-appiumlibrary = "^3.1"
robotframework-faker = "^6.0.0"
robotframework-pabot = "^5.0.0"
robotframework-retryfailed = "^0.2.0"
robotframework-listenerlibrary = "^1.0.3"
robotframework-debuglibrary = "^2.5.0"
faker = "^37.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"